--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "zapbridge-backend",
   "version": "1.0.0",
+  "description": "ZapBridge backend com Baileys e Express",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@adiwajshing/baileys": "^6.5.0",
+    "@adiwajshing/baileys": "6.5.0",
     "express": "^4.18.2",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "pino": "^8.0.0",
+    "ws": "^8.12.0"
   }
 }
