--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "zapbridge-backend",
   "version": "1.0.0",
-  "description": "Backend para conectar WhatsApp via Baileys",
+  "description": "Backend do ZapBridge para conexão do WhatsApp via Baileys",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@adiwajshing/baileys": "6.5.0",
     "express": "^4.18.2",
     "qrcode": "^1.5.3",
-    "pino": "^8.15.0",
-    "pino-pretty": "^9.4.0"
+    "@whiskeysockets/baileys": "^6.5.0"
   },
   "engines": {
-    "node": "20.x"
+    "node": "18.x"
   }
 }
