--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "qrcode": "^1.5.3",
-    "@adiwajshing/baileys": "^6.5.0"
+    "@adiwajshing/baileys": "6.5.0"
   },
   "engines": {
     "node": "18.x"
