--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "zapbridge-backend",
   "version": "1.0.0",
+  "description": "Backend para integração com WhatsApp via Baileys",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "@adiwajshing/baileys": "6.4.0",
     "express": "^4.18.2",
-    "qrcode": "^1.5.3",
-    "@adiwajshing/baileys": "6.5.0"
-  },
-  "engines": {
-    "node": "18.x"
+    "qrcode": "^1.5.3"
   }
 }
